--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,55 +4,55 @@
 
 		<div class="hexagon-grid">
 
-			<div class="hexagon hexagon-grid__item lazy" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
+			<div class="hexagon hexagon-grid__item lazy-img" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item lazy" data-src="/images/tmp/The-catalyst-single-cover-500x500.png">
+			<div class="hexagon hexagon-grid__item lazy-img" data-src="/images/tmp/The-catalyst-single-cover-500x500.png">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item lazy" data-src="/images/tmp/423341110329_Qy737Vid_l.jpg">
+			<div class="hexagon hexagon-grid__item lazy-img" data-src="/images/tmp/423341110329_Qy737Vid_l.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item lazy" data-src="/images/tmp/500x500.jpg">
+			<div class="hexagon hexagon-grid__item lazy-img" data-src="/images/tmp/500x500.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three lazy" data-src="/images/tmp/509084866423_rd0gX45i_l.jpg">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three lazy-img" data-src="/images/tmp/509084866423_rd0gX45i_l.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three lazy" data-src="/images/tmp/78223608549_WRxtYYPS_l.jpg">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three lazy-img" data-src="/images/tmp/78223608549_WRxtYYPS_l.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three lazy" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three lazy-img" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four lazy" data-src="/images/tmp/The-catalyst-single-cover-500x500.png">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four lazy-img" data-src="/images/tmp/The-catalyst-single-cover-500x500.png">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four lazy" data-src="/images/tmp/423341110329_Qy737Vid_l.jpg">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four lazy-img" data-src="/images/tmp/423341110329_Qy737Vid_l.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four lazy" data-src="/images/tmp/500x500.jpg">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four lazy-img" data-src="/images/tmp/500x500.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five lazy" data-src="/images/tmp/509084866423_rd0gX45i_l.jpg">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five lazy-img" data-src="/images/tmp/509084866423_rd0gX45i_l.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five lazy" data-src="/images/tmp/78223608549_WRxtYYPS_l.jpg">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five lazy-img" data-src="/images/tmp/78223608549_WRxtYYPS_l.jpg">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five lazy" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five lazy-img" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
