Prevent storm of recall of lazy-img when scrolling and resizing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@ Style is based on [OOCSS](https://github.com/stubbornella/oocss/wiki) and [BEM](
 
 @import "scut/dist/scut";
 @import "base/vars";
+@import "base/images";
 @import "inuit.css/inuit";
 
 @import "objects/hexagon";
