Introduced wrapper causing no reflows

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 	<div class="grid__item one-whole">
 		<h1>Employ me at DesignIt</h1>
 
-<!--
+
 		<div class="hexagon-grid">
 
 			<div class="hexagon hexagon-grid__item lazy-img" data-src="/images/tmp/Evolution_by_will_yen-500x500.png">
@@ -57,24 +57,24 @@
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-		</div>-->
+		</div>
 
-        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" style="min-height:182px" />
-        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" style="min-height:182px" />
+        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image.jpg" data-src-lap="/images/tmp/image-lap.jpg" data-src-desk="/images/tmp/image-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image2.jpg" data-src-lap="/images/tmp/image2-lap.jpg" data-src-desk="/images/tmp/image2-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image3.jpg" data-src-lap="/images/tmp/image3-lap.jpg" data-src-desk="/images/tmp/image3-desk.jpg" data-ratio="1.5" />
+        <img class="lazy-img" data-src="/images/tmp/image4.jpg" data-src-lap="/images/tmp/image4-lap.jpg" data-src-desk="/images/tmp/image4-desk.jpg" data-ratio="1.5" />
 	</div>
 </div>
 
