Style of js docs

--- a/app/styles/base/_grids.scss
+++ b/app/styles/base/_grids.scss
@@ -5,7 +5,7 @@ Fluid and nestable grid system, e.g.:
 
 	<style>
 		.demo {
-			background: #4a8ec2;
+			background: #272822;
 			padding: 1em;
 			color: #fff;
 		}
@@ -101,7 +101,7 @@ All width can be prefixed with `palm-`. `lap-`, `lap-and-up-`, `portable-`,
 
 	<style>
 		.demo {
-			background: #4a8ec2;
+			background: #272822;
 			padding: 1em;
 			color: #fff;
 		}
