--- a/app/styles/objects/_hexagon.scss
+++ b/app/styles/objects/_hexagon.scss
@@ -7,7 +7,7 @@ Background images should be at 431x431 for best look and performance.
 
 	<style>
 		.hexagon--demo {
-			background: #4a8ec2;
+			background: #272822;
 			color: #fff;
 		}
 		.hexagon--demo-image {
@@ -102,7 +102,7 @@ consists of three rows or less.
 
 	<style>
 		.hexagon-grid__item--demo {
-			background: #4a8ec2;
+			background: #272822;
 			color: #fff;
 		}
 	</style>
