--- a/docs/lib/styledocco-bootstrap-theme/docs.jade
+++ b/docs/lib/styledocco-bootstrap-theme/docs.jade
@@ -16,7 +16,8 @@ html
     meta(charset='utf-8')
     link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', href='/css/bootstrap-docs.css')
-    link(rel='stylesheet', href='/prismjs/prism.css')
+    link(rel='stylesheet', href='/prismjs/prism-okaidia.css')
+    link(rel='stylesheet', href='/css/jvdamgaard-theme.css')
     if (resources.docs && resources.docs.css)
       style !{resources.docs.css}
     script(src='/jquery/jquery.js')
